# querais

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .prettierignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  SESSION_RESUME_slice7.md  Slice10.md  Slice8.md  Slice9.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  querais_go_to_market.md  querais_node_design.md  querais_overview.md  querais_protocol_architecture.md  querais_reputation_system.md  querais_smart_contracts.md  querais_token_economics.md  start-gateway-sepolia.ps1  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
apps/dashboard/: README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: App.tsx  main.tsx  theme.css
apps/website/: IMPROVEMENT_PLAN.md  README.md  next.config.mjs  package.json
apps/website/app/: globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/website/components/: ArchitectureDiagram.tsx  Breadcrumb.tsx  Calculator.tsx  CodeBlock.tsx  (+10 more)
docs/: BETA_PLAYBOOK.md  DEPLOY.md  EXECUTION_PLAN.md  INCENTIVES.md  NODE_RELEASE_INSTALL.md  OBSERVABILITY.md  PHASE3_PLAN.md  PRIVACY.md  REPO_PUBLIC_CHECKLIST.md  RUNBOOK_ALERTS.md  RUNBOOK_KEYS.md  SLICE1_PLAN.md  SLICE2_PLAN.md  SLITHER_TRIAGE.md  TERMS.md
ops/: grafana-dashboard.json  prometheus.yml
scripts/: bootstrap.ps1  bootstrap.sh  bundle-daemon.mjs  install-node.ps1  install-node.sh  setup-node.ps1  setup-node.sh  start-node.ps1  start-node.sh
scripts/release/: env.example  run-node.ps1  run-node.sh
sdk-python/: README.md  pyproject.toml
sdk-python/src/querais/: __init__.py  client.py  langchain.py  llamaindex.py
sdk-python/tests/: test_client.py  test_integrations.py
(+52 files in other folders)
